# sceptre-file-resolver

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
resolver/: file.py
tests/: test_file.py
