[tool.poetry]
name = "sceptre-file-resolver"
version = "1.0.6"
description = "A Sceptre resolver to retrieve file content"
authors = ["zaro0508 <zaro0508@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Sceptre/sceptre-file-resolver"
license = "Apache-2.0"
packages = [{ include = "resolver" }]
keywords = ["sceptre", "sceptre-resolver"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Environment :: Console",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "~2.29"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
tox = "^3.23.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
sceptre = "^4.0"
tox-gh-matrix = "^0.2"

[tool.poetry.plugins."sceptre.resolvers"]
file = "resolver.file:File"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
